force-app/main/default/objects/Dan360_ProductoPorPlantilla__c/Dan360_ProductoPorPlantilla__c.object-meta.xml
<CustomObject>
    <label>Producto por Plantilla</label>
    <nameField>
        <displayFormat>PrdXPla-{0000}</displayFormat>
        <label>Producto por plantilla</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Productos por Plantillas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>