force-app/main/default/objects/Dan360_ProductoPorPlantilla__c/fields/Dan360_Activo__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Señala si un producto está activo de acuerdo a su vigencia.</description>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>