force-app/main/default/objects/Dan360_ProductoPorPlantilla__c/fields/Dan360_PlantillaProductos__c.field-meta.xml
<CustomField>
    <fullName>Dan360_PlantillaProductos__c</fullName>
    <description>Nombre o código de la plantilla creada para el cliente, en donde están registrados los productos que puede adquirir.</description>
    <label>Plantilla de Productos</label>
    <referenceTo>Dan360_PlantillaDeProductos__c</referenceTo>
    <relationshipLabel>Productos por Plantillas</relationshipLabel>
    <relationshipName>Productos_por_Plantillas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>