force-app/main/default/objects/Dan360_ProductoPorPlantilla__c/fields/Dan360_Producto__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Nombre o código del artículo que podrá ser adquirido por los clientes.</description>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Productos por Plantillas</relationshipLabel>
    <relationshipName>Productos_por_Plantillas</relationshipName>
    <type>Lookup</type>
</CustomField>