force-app/main/default/objects/Dan360_ProductoPorPlantilla__c/fields/Dan360_UnidadDeMedida__c.field-meta.xml
<CustomField>
    <fullName>Dan360_UnidadDeMedida__c</fullName>
    <description>Se refiere al negocio donde se generará una transacción, en donde impactará la venta de un producto.</description>
    <label>Unidad de Medida</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trade Unit</fullName>
            </value>
            <value>
                <fullName>Unidad</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>