force-app/main/default/objects/Dan360_ProductoPorPlantilla__c/fields/Dan360_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Dan360_Vigencia__c</fullName>
    <description>Rango de fecha en el que un producto puede ser adquirido.</description>
    <label>Vigencia hasta</label>
    <type>Date</type>
</CustomField>