force-app/main/default/objects/Dan360_ProductoPorPlantilla__c/fields/Dan360_VigenciaDesde__c.field-meta.xml
<CustomField>
    <fullName>Dan360_VigenciaDesde__c</fullName>
    <description>Vigencia a partír de la cual estará el producto en la plantilla.</description>
    <label>Vigencia desde</label>
    <required>true</required>
    <type>Date</type>
</CustomField>