force-app/main/default/objects/Dan360_ProductoPorPlantilla__c/validationRules/Dan360_VigenciaFechaDesde.validationRule-meta.xml
<ValidationRule>
    <fullName>Dan360_VigenciaFechaDesde</fullName>
    <active>true</active>
    <description>Regla de validacion que verifica que la fecha de vigencia desde sea menor a vigencia hasta</description>
    <errorConditionFormula>Dan360_Vigencia__c &lt; Dan360_VigenciaDesde__c</errorConditionFormula>
    <errorDisplayField>Dan360_VigenciaDesde__c</errorDisplayField>
    <errorMessage>La fecha de vigencia desde debe ser menor a la fecha de vigencia hasta
(si esta queriendo activar un producto desactivado, solo mueva la VIGENCIA HASTA)</errorMessage>
</ValidationRule>